--- a/src/app/page/user/user.page.html
+++ b/src/app/page/user/user.page.html
@@ -6,7 +6,7 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
 
-    <ion-title>Usuários</ion-title>
+    <ion-title>Ajuda dos Usuários</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -16,7 +16,7 @@
     <ion-img src="assets/users01.png"></ion-img>
   </div>
   <p>Nesta seção você encontra diversos artigos de ajuda sobre as funcionalidades de gestão de usuários da plataforma.</p>
-  
+
   <!-- Exibe esta div somente se existem documentos a serem exibidos -->
   <div *ngIf="manuals">
 
