app sendo feeito

--- a/src/app/page/home/home.page.html
+++ b/src/app/page/home/home.page.html
@@ -6,7 +6,7 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
 
-    <ion-title>YouMents</ion-title>
+    <ion-title>𝗬𝗢𝗨𝗠𝗘𝗡𝗧𝗦</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -25,8 +25,8 @@
   -->
   <ion-slides [options]="{ autoplay: { delay: 2000 } }">
     <ion-slide><img src="assets/login pc.png" alt="Telas do aplicativo"> </ion-slide>
-    <ion-slide><img src="assets/screens02.jpg" alt="Telas do aplicativo"> </ion-slide>
-    <ion-slide><img src="assets/screens03.jpg" alt="Telas do aplicativo"> </ion-slide>
+    <ion-slide><img src="assets/login pc2.png" alt="Telas do aplicativo"> </ion-slide>
+    <ion-slide><img src="assets/asobre pc.png" alt="Telas do aplicativo"> </ion-slide>
   </ion-slides>
 
   <h3 class="ion-text-center app-name ion-padding ion-no-margin"><img src="assets/logo_64.png"></h3>
