--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <ion-menu contentId="main-content" type="overlay">
       <ion-content>
         <ion-list id="inbox-list">
-          <ion-list-header>YouMents</ion-list-header>
+          <ion-list-header><img src="assets/logo_64.png"></ion-list-header>
           <ion-note>Ajuda e suporte</ion-note>
 
           <ion-menu-toggle auto-hide="false">
@@ -15,7 +15,7 @@
 
             <ion-item routerDirection="root" routerLink="/usuarios" lines="none" detail="false" routerLinkActive="selected">
               <ion-icon slot="start" ios="people-outline" md="people-sharp"></ion-icon>
-              <ion-label>Usuários</ion-label>
+              <ion-label >Usuários</ion-label>
             </ion-item>
 
             <ion-item routerDirection="root" routerLink="/documentos" lines="none" detail="false" routerLinkActive="selected">
