--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,7 @@
 ion-menu ion-content {
-  --background: var(--ion-item-background, var(--ion-background-color, rgba(195, 0, 0, 0.781)));
+  --background: var(--ion-item-background, var(--ion-background-color, rgb(0, 14, 39)));
 }
+
 
 ion-menu.md ion-content {
   --padding-start: 8px;
@@ -17,20 +18,29 @@ ion-menu.md ion-note {
   margin-bottom: 30px;
 }
 
-ion-menu.md ion-list-header,
-ion-menu.md ion-note {
+ion-menu.md ion-list-header{
+
   padding-left: 10px;
+  background: linear-gradient(rgb(255, 0, 212), rgb(255, 255, 255));
+  border-color: #0e0c0e;
+
+}
+ion-menu.md ion-node{
+  margin: 10px 10px 10px 10px;
+  text-align: center;
 }
 
 ion-menu.md ion-list#inbox-list {
-  border-bottom: 1px solid var(--ion-color-step-150, #f3f3f3);
+border-bottom: 1px solid var(--ion-color-step-150, #6d00fb);
+
 }
 
 ion-menu.md ion-list#inbox-list ion-list-header {
-  font-size: 22px;
+  font-size: px;
   font-weight: 600;
-
   min-height: 20px;
+
+
 }
 
 ion-menu.md ion-list#labels-list ion-list-header {
@@ -38,9 +48,11 @@ ion-menu.md ion-list#labels-list ion-list-header {
 
   margin-bottom: 18px;
 
-  color: #ffffff;
+  color: #0e0c0e;
 
   min-height: 26px;
+
+
 }
 
 ion-menu.md ion-item {
@@ -58,7 +70,8 @@ ion-menu.md ion-item.selected ion-icon {
 }
 
 ion-menu.md ion-item ion-icon {
-  color: #ffffff;
+  color: #af10ff;
+
 }
 
 ion-menu.md ion-item ion-label {
@@ -90,7 +103,7 @@ ion-menu.ios ion-item.selected ion-icon {
 
 ion-menu.ios ion-item ion-icon {
   font-size: 24px;
-  color: #73849a;
+  color: #ff00c3;
 }
 
 ion-menu.ios ion-list#labels-list ion-list-header {
@@ -117,3 +130,4 @@ ion-note {
 ion-item.selected {
   --color: var(--ion-color-primary);
 }
+
