--- a/src/app/page/user/user.page.html
+++ b/src/app/page/user/user.page.html
@@ -6,14 +6,14 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
 
-    <ion-title>Ajuda dos Usuários</ion-title>
+    <ion-title>Ajuda para Usuarios</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
 
   <div class="ion-text-center">
-    <ion-img src="assets/users01.png"></ion-img>
+    <ion-img src="assets/interrogação.jpg"></ion-img>
   </div>
   <p>Nesta seção você encontra diversos artigos de ajuda sobre as funcionalidades de gestão de usuários da plataforma.</p>
 
